@@ -1,3 +1,15 @@
+commit b9efefdfb1f21164029122b7b6148033d7cadad2
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Sun Jan 3 00:44:19 2010 +0900
+
+    aufs: tiny, make dentry_open() wrapper inlined again
+    
+    Cf.
+    5f80ac5 aufs: tiny, new abstract function vfsub_dentry_open()
+    a528172 aufs: follow the changes for IMA
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 5f80ac5970a39e18c00db69889ef641aef9e4f48
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Sat Jan 2 16:32:31 2010 +0900
